# trading_engine

./: Cargo.toml  package-lock.json  readme.md
src/: lib.rs  main.rs  utils.rs
src-tauri/: tauri.conf.json
src/bank/: accounts.rs  mod.rs  stock.rs  transactions.rs
src/brokerage/: dataloader.rs  mod.rs
src/state/: mod.rs
src/ticker_discovery/: mod.rs
tests/: test_bank_save.json  test_complex_bank_save.json
