[package]
name = "trading_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
alphavantage = { path = "../alphavantage", features=["cached", "default"]}
tokio = { version = "1", features = ["full"] }
serde = "1.0.217"
serde_json = "1.0.134"
thiserror = "2.0.9"
chrono = "0.4.39"

[lib]
name = "trading_engine"
path = "src/lib.rs"